# rules_lambda

./: .bazelrc  LICENSE  README.md  WORKSPACE  internal_dependencies.bzl
.github/workflows/: ci.bazelrc  ci.yml  release.yml  workspace_snippet.sh
docs/: BUILD.bazel  go_lambda.md  node_lambda.md  rust_lambda.md
lambdas/: BUILD.bazel  dependencies.bzl  go_lambda.bzl  node_lambda.bzl  rust_lambda.bzl  urls.bzl
lambdas/platform/: BUILD.bazel
lambdas/toolchains/: zig_repositories.bzl  zig_toolchain.bzl
